erDiagram
    MODEL ||--o{ DUEL : "Left challenger"
    MODEL ||--o{ DUEL : "Right challenger"
    MODEL ||--o{ DUEL_RESULT : "Generates"
    MODEL ||--o{ ELO_HISTORY : "Tracks"

    DUEL ||--|| DUEL_RESULT : "Has two"
    DUEL ||--o| ELO_HISTORY : "Generates records"

    MODEL {
        string ModelId PK "ULID"
        string PartitionKey "model"
        string DisplayName "1-100 chars"
        enum ModelType "Local/Remote/LocalService"
        double CurrentElo "1200 default"
        int DuelCount "Total duels"
        int WinCount "Wins only"
        double GreenScoreAvg "Tokens/Wh"
        double TdpWatts "Local only"
        string WebLlmModelId "Local only"
        string ApiEndpointRef "Remote/Service"
        decimal InputTokenPrice "Remote only"
        decimal OutputTokenPrice "Remote only"
        datetimeoffset CreatedAt "UTC"
    }

    DUEL {
        string DuelId PK "ULID"
        string PartitionKey "YYYYMM"
        string PromptText "Summary"
        string PromptFull "Full prompt"
        string LeftModelId FK "Model.ModelId"
        string RightModelId FK "Model.ModelId"
        datetimeoffset StartedAt "UTC"
        datetimeoffset CompletedAt "Nullable"
        enum Verdict "Pending/Left/Right/Expired"
        string WinnerModelId "Nullable"
        string LoserModelId "Nullable"
        double EloShiftWinner "Nullable"
        double EloShiftLoser "Nullable"
        datetimeoffset VerdictDeadline "StartedAt + 24h"
        bool IsPartial "One side failed"
    }

    DUEL_RESULT {
        string PartitionKey "DuelId"
        string RowKey "ModelId"
        long WarmUpDurationMs "Token 1 latency"
        long GenerationDurationMs "Post-warmup"
        long TotalDurationMs "Full time"
        int TokenCount "Output tokens"
        double TokenVelocity "Tokens/sec"
        string HtmlOutputRaw "Generated HTML"
        long HtmlOutputSizeBytes "UTF-8 bytes"
        double CharacterDensityRatio "Functional chars / bytes"
        int OutputQualityScore "0-100 scorer"
        bool IsFailure "Inference failed"
        string FailureReason "Error message"
        double EnergyWh "Local only"
        double EnergyCostUsd "Local only"
        double GreenScore "Local only"
        double ApiCostUsd "Remote only"
    }

    ELO_HISTORY {
        string PartitionKey "ModelId"
        string RowKey "invTicks_duelId"
        string DuelId "Reference"
        double EloAfter "Rating after"
        double EloBefore "Rating before"
        double EloShift "Change amount"
        string Outcome "WIN/LOSS"
        string OpponentModelId "Reference"
        double OpponentEloBefore "At match time"
        datetimeoffset RecordedAt "UTC"
    }

    DUEL_RESULT ||--o| MODEL : "References"
    ELO_HISTORY ||--o| MODEL : "References"